# teloscript

./: .env.example  .gitignore  Dockerfile  FINAL_MCP_IMPLEMENTATION_SUMMARY.md  LEARNING_FEATURE_SUMMARY.md  LICENSE  MCP_INSTALLATION_GUIDE.md  MCP_SERVER_README.md  PR_SUMMARY.md  PURPOSE_ENDPOINTS_IMPLEMENTATION_PLAN.md  README.md  RELEASE_NOTES_v1.1.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  setup.py  teloscript_mcp_server.py
config/: purpose_endpoints.json
examples/mcp-server/: README.md  client_example.py  mcp_config_example.json  updated_mcp_config_example.json
examples/purpose_endpoints/: code-analysis-example.json  github-webhook-example.json  research-topic-example.json
mcp_server/: __init__.py  launcher.py  main.py  teloscript_mcp.py
scripts/: preload-mcps.sh  startup.sh
src/: __init__.py  api.py  mcp_agent.py  mcp_agent_backup.py  mcp_host.py  mcp_server.py  models.py  orchestrator.py  purpose_manager.py  teloscript_mcp.py
