[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teloscript-mcp"
version = "1.0.0"
description = "TELOSCRIPT MCP Server - Recursive agent orchestration through MCP protocol"
authors = [{name = "TELOSCRIPT Team"}]
readme = "MCP_SERVER_README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.1.0",
    "httpx>=0.27.0",
    "typing-extensions>=4.8.0",
]

[project.scripts]
teloscript-mcp = "teloscript_mcp:main"
teloscript-mcp-server = "teloscript_mcp:main"

[tool.setuptools]
py-modules = ["teloscript_mcp"]
package-dir = {"" = "mcp_server"}